# mazebolt-server

./: pyproject.toml  readme.md
server/: settings.py  urls.py
server/attacks/: apps.py  controllers.py  forms.py  models.py  urls.py  views.py
server/attacks/migrations/: 0001_initial.py  0002_alter_instance_options_instance_ip_and_more.py
server/attacks/templates/attacks/: base_generic.html  instances.html  start-attack.html  tests.html
server/clients/: google_cloud.py
